Add packages section to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -71,6 +71,18 @@ I decided to build a web application with the framework [Shiny](https://shiny.rs
 
 ## Implementation
 
+### Packages
+
+These are the most important R packages, which I used in my application:
+
+* [shiny](https://github.com/rstudio/shiny) : Reactive web framework for R
+* [DBI](https://github.com/r-dbi/DBI) : Database interface definition for communication between R and SQLite
+* [bs4Dash](https://github.com/RinteRface/bs4Dash) : Bootstrap 4 dashboard using AdminLTE3
+* [htmltools](https://github.com/rstudio/htmltools) : Tools for HTML generation and output
+* [DT](https://github.com/rstudio/DT) : R interface to the jQuery plugin [DataTables](https://datatables.net/)
+* [shinyjs](https://github.com/daattali/shinyjs) : Extending shiny with custom JavaScript
+* [bcrypt](https://github.com/jeroen/bcrypt) : Password hashing
+
 ### Folder structure
 
 * `app.R` : Entry point of the app
@@ -93,6 +105,4 @@ I decided to build a web application with the framework [Shiny](https://shiny.rs
 * `/www` :
   * `/css/styles.css` : Custom css
   * `/js/extend_shinyjs.js` : Custom JS
-
-### Initialisation
 
